[gd_scene load_steps=23 format=2]

[ext_resource path="res://Resources/SignalTypes/KsTafel.obj" type="ArrayMesh" id=1]
[ext_resource path="res://Resources/SignalTypes/Ks/KS-Sig.obj" type="ArrayMesh" id=2]
[ext_resource path="res://Resources/SignalTypes/HpTafel.obj" type="ArrayMesh" id=3]
[ext_resource path="res://Resources/SignalTypes/Ks/ScriptingKs.gd" type="Script" id=4]
[ext_resource path="res://Resources/SignalTypes/VoTafel.obj" type="ArrayMesh" id=5]
[ext_resource path="res://Resources/SignalTypes/vo_tafel.tres" type="Material" id=6]
[ext_resource path="res://Resources/SignalTypes/ks_tafel.tres" type="Material" id=7]
[ext_resource path="res://Resources/SignalTypes/hp_tafel.tres" type="Material" id=8]
[ext_resource path="res://Resources/SignalTypes/LightSignalMaterial.tres" type="Material" id=10]
[ext_resource path="res://Resources/SignalTypes/Ks/Zs3.obj" type="ArrayMesh" id=11]
[ext_resource path="res://Resources/SignalTypes/Ks/Zs3v.obj" type="ArrayMesh" id=12]

[sub_resource type="SpatialMaterial" id=1]
albedo_color = Color( 1, 0.00392157, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SphereMesh" id=2]
radius = 0.05
height = 0.1

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.992157, 0.0941176, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SphereMesh" id=4]
radius = 0.3
height = 0.6
radial_segments = 6
rings = 3

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 1, 0.658824, 0.00392157, 1 )
emission_enabled = true
emission = Color( 1, 0.513726, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0.992157, 0.658824, 0.027451, 1 )
emission_enabled = true
emission = Color( 1, 0.843137, 0, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="SpatialMaterial" id=7]
albedo_color = Color( 0.00392157, 1, 0.0196078, 1 )
emission_enabled = true
emission = Color( 0.196078, 1, 0, 1 )
emission_energy = 1.87
emission_operator = 0
emission_on_uv2 = false

[sub_resource type="SpatialMaterial" id=8]
albedo_color = Color( 0.0588235, 0.992157, 0.027451, 1 )
emission_enabled = true
emission = Color( 0, 1, 0.0392157, 1 )
emission_energy = 1.0
emission_operator = 0
emission_on_uv2 = false
distance_fade_mode = 1
distance_fade_min_distance = 70.0
distance_fade_max_distance = 200.0

[sub_resource type="DynamicFontData" id=17]
font_path = "res://Data/Fonts/Oswald-Regular.ttf"

[sub_resource type="DynamicFont" id=10]
size = 500
font_data = SubResource( 17 )

[sub_resource type="BoxShape" id=16]
extents = Vector3( 0.723062, 3.19305, 0.495782 )

[node name="VisualInstance" type="Spatial"]
script = ExtResource( 4 )

[node name="Zs3" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.6766 )
mesh = ExtResource( 11 )
material/0 = ExtResource( 10 )

[node name="Zs3v" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.6766 )
mesh = ExtResource( 12 )
material/0 = ExtResource( 10 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.67658 )
material_override = ExtResource( 10 )
mesh = ExtResource( 2 )

[node name="HpTafel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.8, 0, 0, 1.74491 )
visible = false
mesh = ExtResource( 3 )
material/0 = ExtResource( 8 )

[node name="KsTafel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 0.8, 0, 0, 1.745 )
visible = false
mesh = ExtResource( 1 )
material/0 = ExtResource( 7 )

[node name="VoTafel" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.677 )
visible = false
mesh = ExtResource( 5 )
material/0 = ExtResource( 6 )

[node name="Red" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.0203973, 4.27763, 1.71823 )
material_override = SubResource( 1 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="Red"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 3 )
mesh = SubResource( 4 )

[node name="Orange" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.00402704, 4.10741, 1.82482 )
visible = false
material_override = SubResource( 5 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance2" type="MeshInstance" parent="Orange"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 6 )
mesh = SubResource( 4 )

[node name="Green" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.00639483, 4.10783, 1.60503 )
visible = false
material_override = SubResource( 7 )
cast_shadow = 0
mesh = SubResource( 2 )

[node name="MeshInstance3" type="MeshInstance" parent="Green"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.5, 0, 0 )
material_override = SubResource( 8 )
mesh = SubResource( 4 )

[node name="Screen1" type="Label3D" parent="."]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.448, 3.405, 1.719 )
cast_shadow = 0
generate_lightmap = false
pixel_size = 0.0007
double_sided = false
modulate = Color( 0.968627, 0.811765, 0.227451, 1 )
text = "20"
font = SubResource( 10 )

[node name="Screen2" type="Label3D" parent="."]
transform = Transform( 1.19249e-08, 0, -1, 0, 1, 0, 1, 0, 1.19249e-08, -0.081, 4.807, 1.719 )
cast_shadow = 0
generate_lightmap = false
pixel_size = 0.0007
double_sided = false
text = "20"
font = SubResource( 10 )

[node name="SelectCollider" type="StaticBody" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.622193, -1.33251, 1.46355 )

[node name="AabbShape" type="CollisionShape" parent="SelectCollider"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.723062, 3.19305, 0.495782 )
shape = SubResource( 16 )
